更新本科生可用版

--- a/MainBody.tex
+++ b/MainBody.tex
@@ -2,7 +2,7 @@
 % 文件描述：以 scuthesis 四川大学学位论文文档类为基础的 LaTeX 模版说明文档
 % 修改日期：2020年2月9日
 % 选用scuthesis文档类，参数master为硕士论文，可选doctor和bachelor，分别对应博士和学士
-\documentclass[doctor,oneside,UTF8,hyperref]{./Template/scuthesis}
+\documentclass[bachelor,oneside,UTF8,hyperref]{./Template/scuthesis}
 \usepackage{fancyvrb}
 \usepackage{xcolor}
 \usepackage{dirtree}
